--- a/styles/base.css
+++ b/styles/base.css
@@ -98,4 +98,8 @@ footer {
     padding: 20px 10px;
     background-color: #333;
     color: white;
+    width: 100%;
+    height: 81px;
+    bottom: 0;
+    left: 0;
 }
