--- a/styles/base.css
+++ b/styles/base.css
@@ -99,7 +99,7 @@ footer {
     background-color: #333;
     color: white;
     width: 100%;
-    height: 81px;
+    height: auto;
     bottom: 0;
     left: 0;
 }
