--- a/styles/larger.css
+++ b/styles/larger.css
@@ -70,7 +70,7 @@
         background-color: #333;
         color: white;
         width: 100%;
-        height: 81px;
+        height: auto;
         position: absolute;
         bottom: 0;
         left: 0;
