--- a/styles/base.css
+++ b/styles/base.css
@@ -1,11 +1,14 @@
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap');
 
 /* Basic Reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+h1, h2, h3{
+    font-family: 'Montserrant', sans-serif;
 }
 
 body, html {
@@ -25,6 +28,12 @@ header {
     align-items: center;
     justify-content: space-around;
     padding: 1rem;
+}
+
+.header-content span{
+    font-size: 30px;
+    font-weight: 600;
+    padding: 10px;
 }
 
 .header-content img {
