add a favicon, hamburguer button and dark mode to the site

--- a/styles/base.css
+++ b/styles/base.css
@@ -42,6 +42,77 @@ header {
     border-radius: 5%;
 }
 
+/* Dark mode styles for mobile */
+body.dark-mode {
+    background-color: #121212;
+    color: #e0e0e0;
+}
+
+.dark-mode main {
+    background-color: #1f1f1f;
+}
+
+.dark-mode header, .dark-mode footer {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark-mode .card {
+    background-color: #2a2a2a;
+}
+
+.dark-mode .card h2 {
+    background-color: #444;
+}
+
+.dark-mode .menu a {
+    color: #fff;
+    background-color: #444;
+}
+
+.dark-mode .menu a:hover {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark-mode .card-container .learn-list a{
+    color: #fff;
+}
+
+/*END*/
+
+/* Styles for hamburguer menu in Mobile */
+.hamburger {
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: block;
+}
+
+/* Hide the menu for default */
+.menu {
+    display: none;
+    flex-direction: column;
+    background-color: #000;
+}
+
+.menu a {
+    padding: 10px;
+    text-align: center;
+}
+
+/* Show the menu when is clicked(open) */
+.menu.open {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*END*/
+
+
 nav {
     background-color: #000;
 }
