--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -42,6 +42,7 @@ nav .logo img {
     text-align: center;
     font-family: "Poppins" , "serif";
     text-transform: uppercase;
+    z-index: 9;
 }
 
 .nav-links li {
@@ -113,6 +114,65 @@ nav .logo img {
 
 /*END HEADER CODE*/
 
+
+/*START HERO CODE*/
+
+/* Hero Section for Mobile */
+.hero {
+    position: relative;
+    width: 100%;
+    height: 60vh; /* Adjust the height as needed */
+    overflow: hidden;
+}
+
+.hero-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the entire section without distortion */
+}
+
+.hero-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.hero-content h1 {
+    font-size: 2rem;
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: #fff;
+}
+
+.btn-primary {
+    background-color: #fff;
+    color: #002349;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 400;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: transparent;
+    color: #fff;
+}
+
+
+
+
+
+/*END HERO CODE*/
+
+
 /*START FOOTER CODE*/
 
 /* Footer styles for mobile */
@@ -169,6 +229,8 @@ footer a {
         &:after{
             width: 100%;
         }
+        letter-spacing: 1px;
+        transition: 0.3s ease;
     }
 }
 
