--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -121,14 +121,14 @@ nav .logo img {
 .hero {
     position: relative;
     width: 100%;
-    height: 60vh; /* Adjust the height as needed */
+    height: 60vh; 
     overflow: hidden;
 }
 
 .hero-img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the image covers the entire section without distortion */
+    object-fit: cover; 
 }
 
 .hero-content {
@@ -166,12 +166,224 @@ nav .logo img {
     color: #fff;
 }
 
-
-
-
-
 /*END HERO CODE*/
 
+
+/*START EVETNS CODE*/
+
+.current-events {
+    padding: 2rem 1rem;
+    background-color: #fff;
+}
+
+.current-events h2 {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+    color: #002349;
+}
+
+.events-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem; 
+}
+
+.event {
+    background-color: #f3f3f3;
+    padding: 1.5rem;
+    border: 1px solid #f1f1f1;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.event h3 {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+    font-family: 'Poppins', sans-serif;
+    color: #002349;
+}
+
+.event p {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    font-family: 'Inter', sans-serif;
+    color: #333;
+    padding-bottom: 10px;
+}
+
+.btn-secondary {
+    background-color: transparent;
+    color: #002349;
+    padding: 0.75rem 1.5rem;
+    font-size: 1rem;
+    border: 1px solid #002349;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 400;
+    text-transform: uppercase;
+    transition: background-color 0.3s ease;
+}
+
+.btn-secondary:hover {
+    background-color: #002349;
+    color: #fff;
+}
+
+/*END EVENTS CODE*/
+
+
+/*START WEATHER CODE*/
+
+.weather-card {
+    background-color: #f3f3f3;
+    padding: 2rem 1rem;
+    text-align: center;
+    border-radius: 10px;
+    margin: 2rem 0;
+}
+
+.weather-card h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-family: 'Poppins', sans-serif;
+    color: #002349;
+}
+
+.weather-content {
+    background-color: #fff;
+    padding: 1.5rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.weather-info p {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    font-family: 'Inter', sans-serif;
+    color: #333;
+}
+
+.weather-info p::before {
+    margin-right: 0.5rem;
+}
+
+/*END WEATHER CODE*/
+
+/*START SPOTLIGHT CODE*/
+
+.company-spotlights {
+    background-color: #ffffff; 
+    padding: 2rem;
+    margin: 2rem 0;
+    text-align: center; 
+}
+
+.company-spotlights h2 {
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    color: #002349;
+}
+
+.spotlight-card {
+    border: 1px solid #f1f1f1;
+    border-radius: 8px;
+    background-color: #F3F3F3;
+    padding: 15px;
+    margin: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s; 
+}
+
+.spotlight-card h3{
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+    font-family: 'Poppins', sans-serif;
+    color: #002349;
+}
+
+.spotlight-card:hover {
+    transform: scale(1.02); 
+}
+
+.spotlight-card a {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+    &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1px;
+        background: grey!important;
+        -webkit-transition: .3s linear;
+        -webkit-transition: .3s linear;
+        transition: .3s linear;
+    }
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0%;
+        height: 1px;
+        background: #002349!important;
+        -webkit-transition: .3s linear;
+        -webkit-transition: .3s linear;
+        transition: .3s linear;
+    }
+    &:hover{
+        &:after{
+            width: 100%;
+        }
+        color: #002349;
+        letter-spacing: 1px;
+        transition: 0.3s ease;
+    }
+}
+
+/*END SPOTLIGHT CODE*/
+
+
+/*START CTA SECTION CODE*/
+
+.cta-block {
+    text-align: center; 
+    padding: 2rem; 
+    background-color: #f3f3f3; 
+}
+
+.cta-block h2 {
+    margin-bottom: 10px;
+    color: #002349;
+}
+
+.cta-block p {
+    margin-bottom: 20px;
+}
+
+.social-icons {
+    display: flex; 
+    justify-content: center; 
+    gap: 15px; 
+}
+
+.social-icon img {
+    width: 40px; 
+    height: 40px; 
+}
+
+.social-icons a:hover{
+    transition: .2s ease;
+    transform: scale(1.1);
+}
+
+
+
+/*END CTA SECTION CODE*/
 
 /*START FOOTER CODE*/
 
