--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -137,12 +137,14 @@ nav .logo img {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    width: 100%;
 }
 
 .hero-content h1 {
     font-size: 2rem;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 1rem;
+    padding-bottom: 10px;
     font-weight: 700;
     letter-spacing: 2px;
     color: #fff;
@@ -153,6 +155,7 @@ nav .logo img {
     color: #002349;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
+    width: 100%;
     border: 1px solid #fff;
     border-radius: 5px;
     text-decoration: none;
