--- a/styles/form.css
+++ b/styles/form.css
@@ -9,7 +9,7 @@
 :root {
     --primary-color: #333;
     --secondary-color: #f4f4f4;
-    --font-family: 'Open Sans', sans-serif;
+    --font-family: 'Montserrant', sans-serif;
 }
 
 h1, h2, h3{
@@ -163,15 +163,9 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="range"],
-button {
-    padding: 10px;
-    font-size: 1rem;
-    border: 1px solid var(--primary-color);
-    border-radius: 5px;
-}
-
 input[type="range"] {
     width: 100%;
+    font-size: 1rem!important;
 }
 
 button {
@@ -181,6 +175,7 @@ button {
     border: 1px solid var(--primary-color);
     font-size: 1.2rem;
     padding: 15px;
+    border-radius: 0;
 }
 
 button:hover {
