--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -242,10 +242,59 @@ nav {
     transform: translateY(-5px);
 }
 
-
-
-
 /*END DISCOVER PAGE CODE*/
+
+
+/*START JOIN PAGE CODE*/
+
+.form-section {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 40px;
+}
+
+.membership-benefits {
+    display: block;
+    padding-left: 20px;
+    border-left: 2px solid #002349;
+}
+
+.membership-benefits h2 {
+    font-size: 2rem;
+    margin-bottom: 15px;
+}
+
+.membership-benefits ul {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+
+.membership-benefits ul li{
+    padding-bottom: 1rem;
+}
+
+/*END JOIN PAGE CODE*/
+
+/*START THANKYOU CODE*/
+
+.thankyou-section {
+    min-height: 75vh;
+    padding: 40px;
+}
+
+.thankyou-section h1 {
+    font-size: 2rem;
+}
+
+.thankyou-section p {
+    font-size: 1rem;
+}
+
+.thankyou-section .btn {
+    font-size: 1rem;
+    padding: 1rem 2rem;
+}
+/*END THANKYOU CODE*/
 
 
 /*START FOOTER CODE*/
