--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -257,6 +257,7 @@ nav {
     display: block;
     padding-left: 20px;
     border-left: 2px solid #002349;
+    margin-top: 1rem;
 }
 
 .membership-benefits h2 {
