--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -279,6 +279,20 @@ nav {
 
 /*END JOIN PAGE CODE*/
 
+/*START DIRECTORY CODE*/
+
+.directory-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.directory-list {
+    display: block;
+}
+
+/*END DIRECTORY PAGE CODE*/
+
+
 /*START THANKYOU CODE*/
 
 .thankyou-section {
