--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -202,8 +202,8 @@ nav {
 
 /*BANNER CODE*/
 .banner:hover{
-    transform: scale(0.98); /* Zoom out al hacer hover */
-        transition: transform 0.3s ease; /* Suavizar el efecto */
+    transform: scale(0.98); 
+        transition: transform 0.3s ease; 
 }
 
 
