--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -397,7 +397,7 @@ nav .logo img {
     left: 0;
     z-index: 1000;
     display: flex; 
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border: 2px solid #002349;
     border-radius: 10px;
@@ -405,18 +405,15 @@ nav .logo img {
 
 .banner p {
     margin: 0;
+    font-size: 14px;
 }
 
-.banner button {
+.close-btn {
     background: transparent;
     border: none;
-    color: #002349;
-    font-size: 1.2rem;
+    color: #ffffff;
+    font-size: 18px;
     cursor: pointer;
-    position: absolute;
-    right: 15px;
-    top: 50%;
-    transform: translateY(-50%); 
 }
 
 /*END BANNER CODE*/
